--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,18 @@
-// Navigation code here
+.spacewalker {
+    display: flex;
+    justify-content: center;
+    font-size: 3.4rem;
+    padding-bottom: 1.5rem;
+}
+
+nav {
+    display: flex;
+    font-size: 1.6rem;
+    justify-content: space-around;
+    max-width: 375px;
+    width: 100%;
+    margin: 0 auto;
+    padding-bottom: 1rem;
+
+}
+
