--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,17 +14,60 @@
   
   }
 
+  img {
+    @media @phone {
+      width: 499px;
+      
+    }
+
+    
+  }
+
   .space-images {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+  }
+    
+  .blast {
+    width: 28%;
+    margin: 20px 2.5%;
+    border-radius: 20px;
+    height: 100%;
 
-    img {
-      width: 28%;
-      margin: 20px 2.5%;
-      border-radius: 20px;
-      height: 100%;
+    @media @phone {
+    width: 95%;
+    border-radius: 20px;
     }
+  }
+
+  .sky {
+    width: 28%;
+    margin: 20px 2.5%;
+    border-radius: 20px;
+    height: 100%;
+
+    @media @phone {
+      display: none;
+    }
+  }
+
+  .launch {
+    width: 28%;
+    margin: 20px 2.5%;
+    border-radius: 20px;
+    height: 100%;
+
+    @media @phone {
+      display: none;
+      
+    }
+  }
+
+
+
+
+    
   }
 
   .visit-planets {
@@ -46,9 +89,20 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      display: flex;
+      flex-direction: column-reverse;
+      padding: 5px;
+    }
+
     .walk-text {
       width: 50%;
 
+      @media @phone {
+        width: 100%;
+        margin-top: 10px;
+      }
+    
       h3 {
         margin-bottom: 10px;
       }
@@ -57,13 +111,37 @@
         margin-bottom: 26px;
       }
 
-      .btn {
+      .btn button {
+        background-color: black;
+        width: 100px;
+        height: 34px;
+        color: white;
+        border-radius: 10px;
+
+        @media @phone {
+          width: 100%;
+          height: 50px;
+          bottom-margin: 20px;
+        }
+      }
+
+      button:hover {
+        background-color: white;
+        color: black;
+        
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: auto 0;
+        display: flex;
+        align-content: stretch;
+        height: auto 0;
+      }
       
       img {
         width: 100%;
@@ -72,4 +150,5 @@
       }
     }
   }
-}// home
+
+// home
